--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <!-- Metadata -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ứng dụng Nhận Diện Biển Báo Giao Thông</title>
-
-    <!-- Google Fonts -->
+    <!-- Thêm Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-
-    <!-- Cropper.js CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css" integrity="sha512-ZV1G38+vjFhVZG+/Z7k/1S5phF5dnL3Z+pK4p/YRpsYlBOiBBcQthY3VxE4iYV/VZx3cTvCoPP0YTPjXHHZmyw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <!-- Custom CSS -->
     <style>
         /* CSS Variables và các kiểu CSS khác giữ nguyên */
         :root {
@@ -200,8 +193,6 @@
         #capturedImage {
             display: none; /* Ẩn ban đầu */
             opacity: 0;
-            max-width: 100%;
-            height: auto;
         }
 
         /* Cải thiện thiết kế Overlay */
@@ -275,12 +266,6 @@
         #quizButton {
             background-color: var(--purple-color);
             display: none; /* Initially hidden */
-        }
-
-        /* Thêm CSS cho nút "Cắt và Nhận Diện" */
-        #cropButton {
-            background-color: var(--primary-color);
-            display: none; /* Ẩn ban đầu */
         }
 
         button:hover:not(:disabled) {
@@ -697,7 +682,6 @@
             <button id="captureButton" aria-label="Chụp ảnh">Bắt Đầu</button>
             <button id="uploadButton" aria-label="Tải ảnh lên">Tải Ảnh Lên</button>
             <button id="downloadButton" aria-label="Tải ảnh xuống">Tải Ảnh Xuống</button>
-            <button id="cropButton" aria-label="Cắt và Nhận Diện">Cắt và Nhận Diện</button>
             <button id="readButton" aria-label="Đọc ý nghĩa biển báo">Đọc</button>
             <button id="retakeButton" aria-label="Chụp lại">Chụp Lại</button>
         </div>
@@ -764,8 +748,7 @@
                     <li>Nhấn nút <strong>"Bắt Đầu"</strong> để khởi động camera.</li>
                     <li>Khi camera đã khởi động, nhấn nút <strong>"Chụp Ảnh"</strong> để bắt đầu quá trình chụp hình biển báo giao thông.</li>
                     <li>Đảm bảo camera của bạn được đặt sao cho biển báo rõ ràng và trung tâm trong khung hình.</li>
-                    <li>Sau khi chụp, sử dụng công cụ cắt ảnh để chọn vùng biển báo cần nhận diện.</li>
-                    <li>Nhấn nút <strong>"Cắt và Nhận Diện"</strong> để hệ thống nhận diện biển báo và hiển thị kết quả.</li>
+                    <li>Sau khi chụp, hệ thống sẽ tự động nhận diện biển báo và hiển thị kết quả.</li>
                     <li>Nhấn nút <strong>"Đọc"</strong> để nghe lại ý nghĩa của biển báo đã nhận diện.</li>
                     <li>Chọn nút <strong>"Làm Bài Kiểm Tra"</strong> để thực hiện bài kiểm tra giao thông.</li>
                 </ol>
@@ -777,10 +760,6 @@
     <!-- TensorFlow.js -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
 
-    <!-- Cropper.js JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js" integrity="sha512-5ToV4HNoX6I0rPjE/ojqAdNQYcixLFlFV/8fn2I2Ti/42QAfYvSzFO0E4hpxqJZ6iIsRHRd/IkzZlJcJeyRZXQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-    <!-- Custom JavaScript -->
     <script>
         // Các phần tử DOM
         const video = document.getElementById('video');
@@ -792,7 +771,6 @@
         const downloadButton = document.getElementById('downloadButton');
         const readButton = document.getElementById('readButton');
         const retakeButton = document.getElementById('retakeButton');
-        const cropButton = document.getElementById('cropButton');
         const capturedImage = document.getElementById('capturedImage');
         const predictionResult = document.getElementById('predictionResult');
         const signMeaning = document.getElementById('signMeaning');
@@ -810,7 +788,6 @@
 
         let signMeanings = {};
         let qaData = [];
-        let cropper = null; // Biến để lưu trữ đối tượng Cropper
 
         /**
          * Hàm tải signMeanings.json
@@ -968,6 +945,8 @@
                 }
             } else {
                 // Nếu camera đã được khởi động, tiến hành chụp ảnh
+                loadingPrediction.style.display = 'flex';
+
                 try {
                     // Kiểm tra xem video đã sẵn sàng chưa
                     if (video.readyState < 3) { // HAVE_CURRENT_DATA = 2, HAVE_FUTURE_DATA = 3
@@ -979,12 +958,32 @@
                     }
 
                     const context = canvas.getContext('2d');
-                    const targetWidth = video.videoWidth;
-                    const targetHeight = video.videoHeight;
+                    const targetWidth = 224;
+                    const targetHeight = 224;
                     canvas.width = targetWidth;
                     canvas.height = targetHeight;
 
-                    context.drawImage(video, 0, 0, targetWidth, targetHeight);
+                    const videoWidth = video.videoWidth;
+                    const videoHeight = video.videoHeight;
+                    if (videoWidth === 0 || videoHeight === 0) {
+                        throw new Error("Video chưa sẵn sàng.");
+                    }
+
+                    const videoAspectRatio = videoWidth / videoHeight;
+                    let drawWidth, drawHeight;
+                    if (videoAspectRatio > 1) {
+                        drawWidth = targetWidth;
+                        drawHeight = targetWidth / videoAspectRatio;
+                    } else {
+                        drawWidth = targetHeight * videoAspectRatio;
+                        drawHeight = targetHeight;
+                    }
+
+                    const dx = (targetWidth - drawWidth) / 2;
+                    const dy = (targetHeight - drawHeight) / 2;
+
+                    // Vẽ ảnh lên canvas với kích thước và vị trí tối ưu
+                    context.drawImage(video, 0, 0, videoWidth, videoHeight, dx, dy, drawWidth, drawHeight);
 
                     const imageDataURL = canvas.toDataURL('image/png');
                     capturedImage.src = imageDataURL;
@@ -1000,18 +999,7 @@
                     readButton.style.display = 'none'; // Ẩn nút đọc ban đầu
                     quizButton.style.display = 'none'; // Ẩn nút kiểm tra ban đầu
 
-                    // Khởi tạo Cropper.js trên ảnh đã chụp
-                    if (cropper) {
-                        cropper.destroy();
-                    }
-                    cropper = new Cropper(capturedImage, {
-                        aspectRatio: 1,
-                        viewMode: 1,
-                        autoCropArea: 1,
-                    });
-
-                    cropButton.style.display = 'inline-block'; // Hiển thị nút "Cắt và Nhận Diện"
-
+                    await predictImage();
                 } catch (error) {
                     console.error("Lỗi khi chụp ảnh: ", error);
                     alert("Đã xảy ra lỗi khi chụp ảnh. Vui lòng thử lại.");
@@ -1058,13 +1046,6 @@
 
             cameraStarted = false; // Reset trạng thái camera
 
-            // Destroy Cropper if exists
-            if (cropper) {
-                cropper.destroy();
-                cropper = null;
-            }
-            cropButton.style.display = 'none';
-
             // Show placeholder image and hide video and overlay
             placeholderImage.style.display = 'block';
             video.style.display = 'none';
@@ -1076,6 +1057,7 @@
 
         /**
          * Hàm đọc văn bản bằng giọng nói
+         * @param {string} text - Văn bản cần đọc
          */
         function speakText(text) {
             if (!('speechSynthesis' in window)) {
@@ -1154,16 +1136,13 @@
                 return;
             }
 
-            loadingPrediction.style.display = 'flex';
-
             try {
                 // Sử dụng tf.tidy để giải phóng bộ nhớ sau khi thực hiện dự đoán
                 tf.tidy(() => {
                     // Chuyển đổi canvas thành tensor
                     const img = tf.browser.fromPixels(canvas);
-                    // Resize ảnh về 224x224 nếu cần
-                    const resized = tf.image.resizeBilinear(img, [224, 224]);
-                    const normalized = resized.div(255.0).expandDims();
+                    // Không cần resize vì canvas đã có kích thước đúng
+                    const normalized = img.div(255.0).expandDims();
 
                     // Thực hiện dự đoán
                     const predictions = model.predict(normalized);
@@ -1292,57 +1271,36 @@
                     readButton.style.display = 'none'; // Ẩn nút đọc ban đầu
                     quizButton.style.display = 'none'; // Ẩn nút kiểm tra ban đầu
 
-                    // Khởi tạo Cropper.js trên ảnh đã tải lên
-                    if (cropper) {
-                        cropper.destroy();
-                    }
-                    cropper = new Cropper(capturedImage, {
-                        aspectRatio: 1,
-                        viewMode: 1,
-                        autoCropArea: 1,
-                    });
+                    // Vẽ ảnh lên canvas để dự đoán
+                    const img = new Image();
+                    img.src = e.target.result;
+                    img.onload = () => {
+                        const context = canvas.getContext('2d');
+                        const targetWidth = 224;
+                        const targetHeight = 224;
+                        canvas.width = targetWidth;
+                        canvas.height = targetHeight;
 
-                    cropButton.style.display = 'inline-block'; // Hiển thị nút "Cắt và Nhận Diện"
+                        const imgAspectRatio = img.width / img.height;
+                        let drawWidth, drawHeight;
+                        if (imgAspectRatio > 1) {
+                            drawWidth = targetWidth;
+                            drawHeight = targetWidth / imgAspectRatio;
+                        } else {
+                            drawWidth = targetHeight * imgAspectRatio;
+                            drawHeight = targetHeight;
+                        }
+
+                        const dx = (targetWidth - drawWidth) / 2;
+                        const dy = (targetHeight - drawHeight) / 2;
+
+                        context.drawImage(img, 0, 0, img.width, img.height, dx, dy, drawWidth, drawHeight);
+                        predictImage();
+                    };
                 };
                 reader.readAsDataURL(file);
             } else {
                 alert("Vui lòng chọn một tệp ảnh hợp lệ.");
-            }
-        });
-
-        /**
-         * Sự kiện khi người dùng nhấn nút "Cắt và Nhận Diện"
-         */
-        cropButton.addEventListener('click', () => {
-            if (cropper) {
-                // Lấy canvas từ vùng đã cắt
-                const croppedCanvas = cropper.getCroppedCanvas({
-                    width: 224,
-                    height: 224,
-                });
-
-                // Chuyển canvas đã cắt thành DataURL
-                const croppedImageDataURL = croppedCanvas.toDataURL('image/png');
-
-                // Hiển thị ảnh đã cắt
-                capturedImage.src = croppedImageDataURL;
-
-                // Cập nhật canvas chính để sử dụng cho dự đoán
-                canvas.width = 224;
-                canvas.height = 224;
-                const context = canvas.getContext('2d');
-                context.clearRect(0, 0, canvas.width, canvas.height);
-                context.drawImage(croppedCanvas, 0, 0);
-
-                // Hủy Cropper.js
-                cropper.destroy();
-                cropper = null;
-
-                // Ẩn nút "Cắt và Nhận Diện"
-                cropButton.style.display = 'none';
-
-                // Tiến hành dự đoán
-                predictImage();
             }
         });
 
