--- a/index.html
+++ b/index.html
@@ -904,6 +904,7 @@
                 video.srcObject = stream;
                 return new Promise((resolve, reject) => {
                     video.onloadedmetadata = () => {
+                        console.log(`Độ phân giải camera: ${video.videoWidth}x${video.videoHeight}`);
                         video.play();
                         resolve();
                     };
@@ -958,6 +959,9 @@
                     }
 
                     const context = canvas.getContext('2d');
+                    context.imageSmoothingEnabled = true;
+                    context.imageSmoothingQuality = 'high'; // Bật thay đổi kích thước chất lượng cao
+
                     const targetWidth = 224;
                     const targetHeight = 224;
                     canvas.width = targetWidth;
@@ -982,7 +986,7 @@
                     const dx = (targetWidth - drawWidth) / 2;
                     const dy = (targetHeight - drawHeight) / 2;
 
-                    // Vẽ ảnh lên canvas với kích thước và vị trí tối ưu
+                    // Vẽ khung hình video lên canvas với thay đổi kích thước chất lượng cao
                     context.drawImage(video, 0, 0, videoWidth, videoHeight, dx, dy, drawWidth, drawHeight);
 
                     const imageDataURL = canvas.toDataURL('image/png');
@@ -1271,11 +1275,14 @@
                     readButton.style.display = 'none'; // Ẩn nút đọc ban đầu
                     quizButton.style.display = 'none'; // Ẩn nút kiểm tra ban đầu
 
-                    // Vẽ ảnh lên canvas để dự đoán
+                    // Vẽ ảnh lên canvas để dự đoán với chất lượng cao
                     const img = new Image();
                     img.src = e.target.result;
                     img.onload = () => {
                         const context = canvas.getContext('2d');
+                        context.imageSmoothingEnabled = true;
+                        context.imageSmoothingQuality = 'high'; // Bật thay đổi kích thước chất lượng cao
+
                         const targetWidth = 224;
                         const targetHeight = 224;
                         canvas.width = targetWidth;
